@@ -4,6 +4,10 @@
     <a href="http://localhost/referer">Referer Servlet forced to http</a>
     <a href="https://localhost/referer">Referer Servlet forced to https</a>
     <br />
+    <a href="/referer" rel="noreferrer">Referer Servlet (noreferrer)</a>
+    <a href="http://localhost/referer" rel="noreferrer">Referer Servlet forced to http (noreferrer)</a>
+    <a href="https://localhost/referer" rel="noreferrer">Referer Servlet forced to https (noreferrer)</a>
+    <br />
     <form method="post" action="/referer">
       <input type="text" name="first" /></br>
       <input type="submit" value="Submit" />
